--- a/scss/sections/_about.scss
+++ b/scss/sections/_about.scss
@@ -1,8 +1,10 @@
 @use '../custom' as *;
 
 .about {
+    transition: 0.5s cubic-bezier(0.75, 0, 0.25, 1);
 
     #about_photo {
+        transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
         background-color: $palette4-cool-gray;
         // box-shadow: 10px 10px 10px 0 darken($palette4-cool-gray, 20%);
         height: 480px;
@@ -11,6 +13,7 @@
     }
 
     #row_about {
+        transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
         border-radius: 20px;
         background-color: $gray-light;
         box-shadow: -5px 5px 16px -10px darken($gray-light, 20%), 
@@ -20,19 +23,23 @@
     }
 
     h4,h6 {
+        transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
         margin-bottom: 10px;
     }
 
     #cs_span {
+        transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
         color: $palette4-queen-blue;
     }
 
     #description {
+        transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
         text-align: justify;
         margin-bottom: 1rem;
     }
     
-    .tabrow{
+    .tabrow {
+        transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
         padding-bottom: 10px;
         margin-bottom: 10px;
         border-bottom: 1px solid $palette2-gunmetal;
