--- a/scss/sections/_experience.scss
+++ b/scss/sections/_experience.scss
@@ -1,6 +1,7 @@
 @use '../custom' as *;
 
 .experience {
+    transition: 0.5s cubic-bezier(0.75, 0, 0.25, 1);
     
     #exp_date {
         font-family: "Space Mono", monospace;
