--- a/scss/sections/_photography.scss
+++ b/scss/sections/_photography.scss
@@ -1,10 +1,13 @@
 @use "../custom"as *;
 
 .photography {
+    transition: 0.5s cubic-bezier(0.25, 0, 0.75, 1);
 
     #photo-row {
+        transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
 
         .img-container {
+            transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
             position: relative;
             display: inline-block;
         }
@@ -15,16 +18,18 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: rgba(0,0,0,0.5);
+            background: rgba(0, 0, 0, 0.5);
             opacity: 0;
-            transition: opacity 500ms ease-in-out;
+            transition: opacity 500ms cubic-bezier(0.25, 0, 0.75, 1);
         }
 
         .img-container:hover .img-overlay {
+            transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
             opacity: 1;
         }
 
         .img-overlay .img-overlay-content {
+            transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
             position: absolute;
             top: 50%;
             left: 50%;
@@ -34,6 +39,7 @@
         }
 
         img {
+            transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
             height: 615.7px;
             max-width: 615.7px;
             object-fit: cover;
@@ -50,7 +56,8 @@
     // }
 }
 
-.modal .modal-content img{
+.modal .modal-content img {
+    transition: 0.1s cubic-bezier(0.25, 0, 0.75, 1);
     max-height: 100vh;
     max-width: 100%;
 }
