--- a/scss/sections/_landing.scss
+++ b/scss/sections/_landing.scss
@@ -39,7 +39,7 @@
     }
     
     .light-mode-toggler {
-        display: none;
+        // display: none;
 
         position: fixed;
         justify-content: center;
